--- a/substyle.css
+++ b/substyle.css
@@ -29,3 +29,12 @@ main p , main ul li{
     padding-left: 3px;
     margin-left: 10px;
 }
+
+@media only screen and ( max-width: 600px){
+    main .header h1{
+        font-size: 22px;
+    }
+    main p{
+        font-size: 15px;
+    }
+}
