--- a/style.css
+++ b/style.css
@@ -280,11 +280,14 @@ header nav .btn1 {
     width: 130px;
     font-size: 13px;
   }
+  footer{
+    font-size: 17px; 
+  } 
  
 }
 @media only screen and ( max-width: 530px){
    header nav ul li{
-     font-size: 12px;
+     font-size: 11px;
      margin: 7px;
    }
    main #first{
